--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -59,8 +59,8 @@
 
 @media (min-width:325px) and (max-width:375px) {
     .mySwiper{
-        width: auto;
-        height: auto;
+        width: 80%;
+        height: 80% !important;
     }
 
     .carde{
@@ -72,14 +72,40 @@
     .emg{
         width: 80%;
         align-items: center;
-        margin-left: 17px !important;
+        margin-left: 25px !important;
         margin-top: 15px;
     }
     
 }
 
+@media (min-width:376px) and (max-width:425px) {
 
-@media (min-width:375px) and (max-width:600px) {
+    .carde{
+        display: flex;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
+    .emg{
+        width: 80%;
+        align-items: center;
+        margin-left: 30px;
+        margin-top: 45px;
+    }
+
+    .mySwiper{
+    width: 80%;
+    height: 80% !important;
+    }
+
+    .tittl{
+        padding-bottom: -5px;
+        font-size: 20px;
+    }
+}
+
+
+@media (min-width:426px) and (max-width:600px) {
     .mySwiper{
         width: auto;
         height: auto;
