--- a/src/Components/Explore/Explore.css
+++ b/src/Components/Explore/Explore.css
@@ -11,8 +11,8 @@
 }
 
 .carde2{
-    background: linear-gradient(125deg, #2d0c68 0%, #303166 37%, #370544 100%);
-    border: 2px solid #f3a735;
+    background: linear-gradient(125deg, #0f0a8b 0%, #303166 37%, #0a068e 100%);
+    border: 2px solid #4fbbf0;
     border-radius: 40px;
     /* padding: 25px; */
     display: flex;
