--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,5 +1,5 @@
 .home-4{
-    background-image: url(../../assets/images/banner/8.jpg);
+    background-image: url(../../assets/images/bbgg.webp);
     width: 100% !important;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .carde{
-    background: linear-gradient(125deg, #2d0c68 0%, #303166 37%, #370544 100%);
+    background: linear-gradient(125deg, #0f0a8b 0%, #303166 37%, #0a068e 100%) !important;
     border: 2px solid #f3a735;
     border-radius: 40px;
     /* padding: 25px; */
@@ -30,7 +30,7 @@
 
 .inner{
     border-radius: 30px;
-    background: linear-gradient(125deg, #2d0c68 0%, #303166 37%, #370544 100%);
+    background: linear-gradient(125deg, #0f0a8b 0%, #303166 37%, #0a068e 100%) !important;
     border: none;
 }
 
@@ -269,3 +269,13 @@
         padding-bottom: 10px;
     }
 }
+
+
+.jj{
+}
+
+.wallet-item.home-4 {
+    background: linear-gradient(125deg, #3b11da 0%, #c9cacb 37%, #3b11da 100%);
+    
+}
+/*  */
